2000-06-13  Maciej Stachowiak  <mjs@eazel.com>

	Bugzilla task #1074
	
	* libgnomevfs/gnome-vfs-mime-handlers.c:
	(gnome_vfs_mime_get_default_action_type,
	gnome_vfs_mime_get_default_application,
	gnome_vfs_mime_get_default_component,
	gnome_vfs_mime_get_short_list_applications,
	gnome_vfs_mime_get_short_list_components,
	gnome_vfs_mime_get_all_applications): Added support for trying the
	supertype.
	(gnome_vfs_mime_str_list_merge,
	gnome_vfs_mime_str_list_apply_delta,
	gnome_vfs_mime_do_short_list_processing): New or modified helper
	functions.
	(process_app_list): Changed to take a GList of IDs instead of a
	comma-separated string.
	* data/mime/gnome-vfs.keys: Added text/* entry.
	
2000-06-13  Maciej Stachowiak  <mjs@eazel.com>

	* libgnomevfs/gnome-vfs-mime-handlers.c
	(gnome_vfs_mime_get_all_components): Fix broken query.

2000-06-13  Maciej Stachowiak  <mjs@eazel.com>

	* data/mime/gnome-vfs.keys, data/mime/gnome-vfs.mime: Made
	canonical mime types for shell and c-shell scripts text/x-sh and
	text/x-csh, not application/x-sh and application/x-csh.

2000-06-12  Maciej Stachowiak  <mjs@eazel.com

	* libgnomevfs/gnome-vfs-mime-handlers.c
	(gnome_vfs_mime_get_all_components): Fix syntax error in query.

2000-06-12  John Sullivan  <sullivan@eazel.com>

	* libgnomevfs/gnome-vfs-mime-handlers.c:
	(gnome_vfs_mime_set_default_application),
	(gnome_vfs_mime_set_default_component):
	Set the default action type if it had no
	previous value.

2000-06-12  Ramiro Estrugo  <ramiro@eazel.com>

	* libgnomevfs/Makefile.am:
	Make the private header really private by not installing it.
	
2000-06-12  Eskil Heyn Olsen  <eskil@eazel.com>

	* gnome-vfs.spec.in: Changed the Requires to what the configure.in
	is actually checking for.
	* libgnomevfs/Makefile.am: Added
	gnome-vfs-mime-sniff-buffer-private.h to HEADERS.
	* mime-type-capplet/Makefile.am: added a -D to install of the
	.desktop file. Ensures that the dir is there during rpm -ta.

	Can now build a gnome-vfs rpm.
