@@ -1,5 +1,13 @@
 2000-06-13  Maciej Stachowiak  <mjs@eazel.com>
 
+	* libgnomevfs/gnome-vfs-mime-handlers.c
+	(gnome_vfs_mime_get_default_component):FIx part of FIXME 1145;
+	prefer a component of the short list as a fallback default if no
+	explicit default.
+	(gnome_vfs_mime_get_short_list_components): Fix a bug in the query.
+
+2000-06-13  Maciej Stachowiak  <mjs@eazel.com>
+
 	Bugzilla task #1074
 	
 	* libgnomevfs/gnome-vfs-mime-handlers.c:
